--- a/app/src/main/res/layout/fragment_temperature.xml
+++ b/app/src/main/res/layout/fragment_temperature.xml
@@ -9,45 +9,96 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_gravity="center_horizontal|top">
+        android:layout_gravity="center|top">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Meat Temp:"
+            android:id="@+id/textView" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
+            android:text="0 F"
             android:id="@+id/meatTempView"
             android:layout_gravity="center_horizontal"
             android:paddingTop="30dp"
-            android:paddingBottom="30dp" />
+            android:paddingBottom="30dp"
+            android:textSize="@dimen/sm_temp_text_height" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Smoker Temp:"
+            android:id="@+id/textView2" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
+            android:text="0 F"
             android:id="@+id/smokerTempView"
             android:layout_gravity="center_horizontal"
             android:autoText="false"
             android:paddingTop="30dp"
-            android:paddingBottom="30dp" />
+            android:paddingBottom="30dp"
+            android:textSize="@dimen/sm_temp_text_height" />
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Last Update:"
-        android:id="@+id/timestampLabel"
-        android:layout_gravity="left|bottom" />
+        android:layout_gravity="center|bottom">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="00:00:00"
-        android:id="@+id/lastUpdateView"
-        android:layout_gravity="right|bottom" />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Last Update Request:   "
+                android:id="@+id/lastupdateLabel"
+                android:layout_gravity="left|top" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="00:00:00"
+                android:id="@+id/lastUpdateView"
+                android:layout_gravity="right|top" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Last Grill Update:   "
+                android:id="@+id/timestampLabel"
+                android:layout_gravity="bottom|left" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="00:00:00"
+                android:id="@+id/timestampView"
+                android:layout_gravity="bottom|right" />
+            </LinearLayout>
+
+
+    </LinearLayout>
 
 </FrameLayout>
