--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="sm_pid_setting_text_height">45sp</dimen>
     <dimen name="sm_temp_text_height">85sp</dimen>
     <dimen name="sm_temp_landscape_text_height">95sp</dimen>
 </resources>
