--- a/app/src/main/res/layout-land/fragment_temperature.xml
+++ b/app/src/main/res/layout-land/fragment_temperature.xml
@@ -64,6 +64,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Blower Setting:   "
+                android:paddingLeft="5dp"
+                android:id="@+id/blowerSettingLabel"
+                android:layout_gravity="left|top" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="0"
+                android:id="@+id/blowerSettingView"
+                android:layout_gravity="right|top" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Last Update Request:   "
                 android:id="@+id/lastupdateLabel"
                 android:layout_gravity="left|top" />
